--- a/react-front/index.html
+++ b/react-front/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="public/styles/reset.css" />
     <link rel="stylesheet" type="text/css" href="public/styles/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
     <title>My App</title>
   </head>
 
