--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap"
       rel="stylesheet"
     />
-    <title>My App</title>
+    <title>CNaaS NMS</title>
   </head>
 
   <body>
