--- a/docker/front/index.html
+++ b/docker/front/index.html
@@ -8,11 +8,12 @@
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
+    <link rel="stylesheet" type="text/css" href="styles/prism.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap"
       rel="stylesheet"
     />
-    <title>CNaaS</title>
+    <title>CNaaS NMS</title>
   </head>
   <body>
    <noscript>
