add stylesheet for toast to docker

--- a/docker/front/index.html
+++ b/docker/front/index.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
     <link rel="stylesheet" type="text/css" href="styles/prism.css" />
+    <link rel="stylesheet" type="text/css" href="styles/react-semantic-alert.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap"
       rel="stylesheet"
