--- a/docker/front/index.html
+++ b/docker/front/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -9,7 +9,11 @@
     />
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
     <link rel="stylesheet" type="text/css" href="styles/prism.css" />
-    <link rel="stylesheet" type="text/css" href="styles/react-semantic-alert.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="styles/react-semantic-alert.css"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap"
       rel="stylesheet"
@@ -17,9 +21,7 @@
     <title>CNaaS NMS</title>
   </head>
   <body>
-   <noscript>
-     You need to enable JavaScript to run this app.
-   </noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root">
       <!-- react components are rendered here -->
     </div>
