--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
       <!-- react components are rendered here -->
     </div>
     <script src="index.js"></script>
+    <script src="version_checker.js"></script>
   </body>
 </html>
