refrence index.js as module

--- a/docker/front/index.html
+++ b/docker/front/index.html
@@ -25,6 +25,6 @@
     <div id="root">
       <!-- react components are rendered here -->
     </div>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
