--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link
-      rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+      rel="stylesheet"
+      type="text/css"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap"
       rel="stylesheet"
+      type="text/css"
     />
     <title>CNaaS NMS</title>
   </head>
