--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link
-      href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
       rel="stylesheet"
-      type="text/css"
-    />
+      href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap"
-      rel="stylesheet"
-      type="text/css"
-    />
+      rel="stylesheet" />
     <title>CNaaS NMS</title>
   </head>
 
