--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <link
+      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css"
       rel="stylesheet"
-      href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
+      type="text/css"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap"
       rel="stylesheet" />
     <title>CNaaS NMS</title>
+    <link
+      href="./styles/reset.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="./styles/main.css"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
 
   <body>
