--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,11 @@
     />
     <link
       href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
+    <link href="./styles/reset.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/main.css" rel="stylesheet" type="text/css" />
     <title>CNaaS NMS</title>
-    <link
-      href="./styles/reset.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="./styles/main.css"
-      rel="stylesheet"
-      type="text/css"
-    />
   </head>
 
   <body>
