--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,15 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap"
-      rel="stylesheet"
-    />
+    <title>CNaaS NMS</title>
+    <meta name="viewport" content="width=device-width" />
+    <link href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css" rel="stylesheet"
+      type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap" rel="stylesheet" />
     <link href="./styles/reset.css" rel="stylesheet" type="text/css" />
     <link href="./styles/main.css" rel="stylesheet" type="text/css" />
-    <title>CNaaS NMS</title>
   </head>
-
   <body>
     <div id="root">
       <!-- react components are rendered here -->
