--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
+    <title>CNaaS NMS</title>
+    <meta name="viewport" content="width=device-width" />
     <link
       href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css"
       rel="stylesheet"
@@ -13,9 +15,7 @@
     />
     <link href="./styles/reset.css" rel="stylesheet" type="text/css" />
     <link href="./styles/main.css" rel="stylesheet" type="text/css" />
-    <title>CNaaS NMS</title>
   </head>
-
   <body>
     <div id="root">
       <!-- react components are rendered here -->
