fix prismjs diff-highlight

--- a/docker/front/index.html
+++ b/docker/front/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
+    <title>CNaaS NMS</title>
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" type="text/css" href="styles/reset.css" />
     <link
       rel="stylesheet"
@@ -18,7 +20,6 @@
       href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat&display=swap"
       rel="stylesheet"
     />
-    <title>CNaaS NMS</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
