--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     />
     <link href="./styles/reset.css" rel="stylesheet" type="text/css" />
     <link href="./styles/main.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/main.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="root">
